# TG-Universal-Forwarding-Bot

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_ja.md  README_ko.md  README_zh.md  config.example.env  content_addition.json  keywords.txt  replacements.json  sources.txt
app/: Cargo.toml
app/src/: main.rs  thumb_dedup.rs
common/: Cargo.toml
common/src/: lib.rs  text.rs  time.rs  utf16.rs
config/: Cargo.toml
config/src/: lib.rs  loader.rs  paths.rs  validate.rs
core/: Cargo.toml
core/src/: album.rs  append.rs  catch_up.rs  dedup.rs  dispatch.rs  entity_trim.rs  filter.rs  hotreload.rs  lib.rs  media_filter.rs  model.rs  pipeline.rs  replace.rs  sources.rs  text_merge.rs  throttle.rs  thumb.rs
docs/i18n/: README_ja.md  README_ko.md  README_zh.md  安装到VPS说明.MD
logging/: Cargo.toml
logging/src/: lib.rs
storage/: Cargo.toml
storage/src/: dedup.rs  lib.rs  log.rs  session.rs  state.rs
tdlib/: Cargo.toml
tdlib/src/: client.rs  lib.rs  model.rs  send.rs
